# georef-python

./: README.md  pyproject.toml
georef_python/: ImageManager.py  cornerdetect.py  georef_reproj.py  main.py
